-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 24
-
Component/s: hotspot
-
b17
- duplicates
-
JDK-8347371 GenShen: Crash due to "Remembered set violation at init-update-references; clean card should be dirty"
-
- Closed
-
- relates to
-
JDK-8337511 Implement JEP 404: Generational Shenandoah (Experimental)
-
- Resolved
-
-
JDK-8298781 jtreg test gc/TestAllocHumongousFragment.java fails intermittent
-
- Open
-
-
JDK-8353691 GenShen: gc/TestAllocHumongousFragment.java#generational crash on ppc64le
-
- Open
-
-
JDK-8287090 Shenandoah: after updaterefs verification reports confusing error message
-
- Open
-
- links to
-
Commit(master)
openjdk/jdk/4d1de46c
-
Commit(master)
openjdk/shenandoah-jdk21u/51256d9d
-
Review(master)
openjdk/jdk/24092
-
Review(master)
openjdk/shenandoah-jdk21u/188