8345399: GenShen: Error: Verify init-mark remembered set violation; clean card should be dirty