src/hotspot/share/gc/shenandoah/shenandoahVerifier.hpp
@@ -228,15 +228,13 @@ public:
   // Check that generation usages are accurate before rebuilding free set
   void verify_before_rebuilding_free_set();
 private:
-  template<typename Scanner>
-  void help_verify_region_rem_set(Scanner* scanner, ShenandoahHeapRegion* r, ShenandoahMarkingContext* ctx,
+  template<bool AFTER_FULL_GC = false, typename Scanner>
+  void help_verify_region_rem_set(Scanner* scanner, ShenandoahHeapRegion* r,
                                   HeapWord* update_watermark, const char* message);
 
   void verify_rem_set_before_mark();
   void verify_rem_set_before_update_ref();
   void verify_rem_set_after_full_gc();
-
-  ShenandoahMarkingContext* get_marking_context_for_old();
 };
 
 #endif // SHARE_GC_SHENANDOAH_SHENANDOAHVERIFIER_HPP
